--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-google-charts": "^3.0.15",
     "react-scripts": "3.4.1",
     "recharts": "^1.8.5",
+    "sass": "^1.26.5",
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
